force-app/main/default/objects/Package_Dependency__c/Package_Dependency__c.object-meta.xml
<CustomObject>
    <label>Package Dependency</label>
    <nameField>
        <displayFormat>GPBUMPD-{0000}</displayFormat>
        <label>Package Dependency Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>