force-app/main/default/objects/Package_Dependency__c/fields/Dependent_Package__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Package__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dependent Package</label>
    <referenceTo>GPBU_Package__c</referenceTo>
    <relationshipLabel>Packages Depending on This</relationshipLabel>
    <relationshipName>Packages_Depending_On</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>