force-app/main/default/objects/Package_Dependency__c/fields/GPBU_Package__c.field-meta.xml
<CustomField>
    <fullName>GPBU_Package__c</fullName>
    <label>GPBU Package</label>
    <referenceTo>GPBU_Package__c</referenceTo>
    <relationshipLabel>Package Dependencies</relationshipLabel>
    <relationshipName>Package_Dependencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>